--- a/src/style/main.css
+++ b/src/style/main.css
@@ -105,4 +105,358 @@ body {
   margin-top: 0.5em;
   color: #0d0d37;
   cursor: pointer;
+}
+
+.loginSwitcher {
+  text-align: center;
+  margin-top: 1em;
+  color: white;
+}
+
+.goHomeBtn {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  background-color: white;
+  padding: 1em;
+  border-radius: 10px;
+  text-decoration: none;
+  color: #0d0d37;
+  font-weight: 600;
+}
+
+.SignUp {
+  width: 100%;
+  background-color: #0d0d37;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.SignUp form {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+}
+.SignUp form h1 {
+  text-align: center;
+  font-size: 2.5em;
+  color: white;
+}
+.SignUp form div {
+  display: flex;
+  flex-direction: column;
+  margin: 0.4em 0;
+}
+.SignUp form div label {
+  font-size: 1.1em;
+  color: white;
+  font-weight: 600;
+  padding-left: 0.2em;
+}
+.SignUp form div input {
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  padding: 1em;
+  padding-left: 1.2em;
+  font-size: 1em;
+  background-color: white;
+  color: #0d0d37;
+}
+.SignUp form input[type=submit] {
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  font-size: 1em;
+  text-transform: capitalize;
+  padding: 1em;
+  margin-top: 0.5em;
+  color: #0d0d37;
+  cursor: pointer;
+}
+.SignUp form .radbtnHolder {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3em;
+}
+
+nav {
+  position: relative;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+  background-color: #0d0d37;
+}
+nav .innerNav {
+  width: 100%;
+  max-width: 1400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .innerNav h1 {
+  color: white;
+}
+nav .innerNav .menu {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+  max-width: 700px;
+}
+nav .innerNav .menu input[type=search] {
+  width: 100%;
+  margin: 0 1em 0 0;
+  border-radius: 5px;
+  border: none;
+  padding-left: 2em;
+  outline: none;
+}
+nav .innerNav .menu .links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+nav .innerNav .menu .links a {
+  color: #0d0d37;
+  text-decoration: none;
+  background-color: white;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  font-weight: 600;
+}
+
+.genreHolder {
+  position: relative;
+  width: 100%;
+  max-width: 1405px;
+  margin: 1em auto 0;
+  padding: 0 1em;
+}
+@media screen and (max-width: 563px) {
+  .genreHolder {
+    margin-top: 4.5em;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .genreHolder {
+    max-width: 1444px;
+  }
+}
+.genreHolder div button {
+  right: 16px;
+  top: 36%;
+  line-height: 0;
+  background-color: white;
+}
+.genreHolder div button::before {
+  font-family: unset;
+  color: #0d0d37;
+}
+.genreHolder div .slick-prev {
+  left: -5px;
+}
+.genreHolder div div div div {
+  margin-right: 0.3em;
+}
+
+.row {
+  position: relative;
+  width: 100%;
+  padding: 1em 1em 0;
+  max-width: 1400px;
+  margin: 0em auto;
+  z-index: 1;
+}
+@media screen and (min-width: 1800px) {
+  .row {
+    max-width: 2000px;
+  }
+}
+.row h2 {
+  display: flex;
+  margin-bottom: 0.7em;
+  cursor: pointer;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-top: 0.5em;
+}
+.row h2 a {
+  color: #0d0d37;
+  text-decoration: none;
+}
+.row h2 span {
+  margin: 0 0 0 0.3em;
+}
+@media screen and (max-width: 460px) {
+  .row {
+    margin-top: -1em;
+    margin-bottom: 0;
+  }
+}
+
+.row__posters {
+  position: relative;
+  display: flex;
+  flex-flow: row;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  contain: content;
+  max-height: 403px;
+}
+
+.row__posters::-webkit-scrollbar {
+  display: none;
+}
+
+.row__posters {
+  position: relative;
+  display: flex;
+  flex-flow: row;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  contain: content;
+  max-height: 403px;
+}
+
+.row__posters::-webkit-scrollbar {
+  display: none;
+}
+
+.genree {
+  position: relative;
+  border-radius: 7px;
+  padding: 0.5em 1em;
+  color: #0d0d37;
+  background-color: transparent;
+  border: 2px solid #0d0d37;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin: 0 0.5em 0 0;
+  display: flex;
+  align-items: center;
+  max-height: 40px;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  min-width: 150px;
+}
+@media screen and (min-width: 460px) {
+  .genree:hover {
+    background-color: #0d0d37;
+    color: white;
+  }
+}
+
+#firstRow {
+  margin-top: 3em;
+}
+
+.all_of_the_row_holder {
+  position: relative;
+}
+
+.scrolOnRowHolder {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  background-color: transparent;
+  pointer-events: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  opacity: 0.2;
+  transition: opacity 0.3s ease;
+}
+@media screen and (max-width: 500px) {
+  .scrolOnRowHolder {
+    display: none;
+  }
+}
+.scrolOnRowHolder:hover {
+  opacity: 0.8;
+}
+.scrolOnRowHolder div {
+  pointer-events: fill;
+  cursor: pointer;
+  border-radius: 10px;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.8827906162) 0%, rgba(0, 0, 0, 0) 100%);
+  display: flex;
+  align-items: center;
+  height: 100%;
+  opacity: 0.8;
+}
+.scrolOnRowHolder div img {
+  width: 60px;
+  color: white;
+  transition: width 0.1s ease;
+}
+.scrolOnRowHolder div:hover {
+  opacity: 1;
+}
+.scrolOnRowHolder div:hover img {
+  width: 60px;
+}
+.scrolOnRowHolder #scrollRight {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8827906162) 100%);
+}
+
+.Offre {
+  margin: 0 0.5em 0 0;
+  background-color: #0d0d37;
+  color: white;
+  border-radius: 10px;
+  min-width: 250px;
+  min-height: 260px;
+  display: flex;
+  flex-direction: column;
+}
+.Offre span {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+.Offre img {
+  width: 100%;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+footer {
+  width: 100%;
+  background-color: #0d0d37;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1em;
+}
+footer .innerFooter {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  align-items: center;
+}
+footer .innerFooter label {
+  font-size: 1.5em;
+  font-weight: 700;
+}
+footer .innerFooter h1 {
+  font-size: 1.5em;
 }/*# sourceMappingURL=main.css.map */
